// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`suggestion mode: change block type of a block with children 1`] = `
"<blockGroup>
  <blockContainer id="n0">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N0</paragraph>
    <blockGroup>
      <blockContainer id="n1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">N1</paragraph>
      </blockContainer>
    </blockGroup>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: change block type of a block with children 2`] = `
"<blockGroup>
  <blockContainer id="n0">
    <heading
      backgroundColor="default"
      isToggleable="false"
      level="1"
      textAlignment="left"
      textColor="default"
    >N0</heading>
    <blockGroup>
      <blockContainer id="n1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">N1</paragraph>
      </blockContainer>
    </blockGroup>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: change block type of a block with children 3`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n0">
          <y-attributed-delete userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-delete userIds="">N0</y-attributed-delete>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-delete>
          <y-attributed-delete userIds="">
            <blockGroup>
              <y-attributed-delete userIds="">
                <y-attributed-attrs
                  changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                >
                  <blockContainer id="n1">
                    <y-attributed-delete userIds="">
                      <y-attributed-attrs
                        changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                      >
                        <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                          <y-attributed-delete userIds="">N1</y-attributed-delete>
                        </paragraph>
                      </y-attributed-attrs>
                    </y-attributed-delete>
                  </blockContainer>
                </y-attributed-attrs>
              </y-attributed-delete>
            </blockGroup>
          </y-attributed-delete>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-delete>
    <y-attributed-insert userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n0">
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;level&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;isToggleable&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <heading
                backgroundColor="default"
                isToggleable="false"
                level="1"
                textAlignment="left"
                textColor="default"
              >
                <y-attributed-insert userIds="">N0</y-attributed-insert>
              </heading>
            </y-attributed-attrs>
          </y-attributed-insert>
          <y-attributed-insert userIds="">
            <blockGroup>
              <y-attributed-insert userIds="">
                <y-attributed-attrs
                  changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                >
                  <blockContainer id="n1">
                    <y-attributed-insert userIds="">
                      <y-attributed-attrs
                        changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                      >
                        <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                          <y-attributed-insert userIds="">N1</y-attributed-insert>
                        </paragraph>
                      </y-attributed-attrs>
                    </y-attributed-insert>
                  </blockContainer>
                </y-attributed-attrs>
              </y-attributed-insert>
            </blockGroup>
          </y-attributed-insert>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: indent a block 1`] = `
"<blockGroup>
  <blockContainer id="n0">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N0</paragraph>
  </blockContainer>
  <blockContainer id="n1">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N1</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: indent a block 2`] = `
"<blockGroup>
  <blockContainer id="n0">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N0</paragraph>
    <blockGroup>
      <blockContainer id="n1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">N1</paragraph>
      </blockContainer>
    </blockGroup>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: indent a block 3`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n0">
          <y-attributed-delete userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-delete userIds="">N0</y-attributed-delete>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-delete>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-delete>
    <y-attributed-delete userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n1">
          <y-attributed-delete userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-delete userIds="">N1</y-attributed-delete>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-delete>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-delete>
    <y-attributed-insert userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n0">
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-insert userIds="">N0</y-attributed-insert>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-insert>
          <y-attributed-insert userIds="">
            <blockGroup>
              <y-attributed-insert userIds="">
                <y-attributed-attrs
                  changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                >
                  <blockContainer id="n1">
                    <y-attributed-insert userIds="">
                      <y-attributed-attrs
                        changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                      >
                        <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                          <y-attributed-insert userIds="">N1</y-attributed-insert>
                        </paragraph>
                      </y-attributed-attrs>
                    </y-attributed-insert>
                  </blockContainer>
                </y-attributed-attrs>
              </y-attributed-insert>
            </blockGroup>
          </y-attributed-insert>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: unindent a block 1`] = `
"<blockGroup>
  <blockContainer id="n0">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N0</paragraph>
    <blockGroup>
      <blockContainer id="n1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">N1</paragraph>
      </blockContainer>
    </blockGroup>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: unindent a block 2`] = `
"<blockGroup>
  <blockContainer id="n0">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N0</paragraph>
  </blockContainer>
  <blockContainer id="n1">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">N1</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: unindent a block 3`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n0">
          <y-attributed-delete userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-delete userIds="">N0</y-attributed-delete>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-delete>
          <y-attributed-delete userIds="">
            <blockGroup>
              <y-attributed-delete userIds="">
                <y-attributed-attrs
                  changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                >
                  <blockContainer id="n1">
                    <y-attributed-delete userIds="">
                      <y-attributed-attrs
                        changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                      >
                        <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                          <y-attributed-delete userIds="">N1</y-attributed-delete>
                        </paragraph>
                      </y-attributed-attrs>
                    </y-attributed-delete>
                  </blockContainer>
                </y-attributed-attrs>
              </y-attributed-delete>
            </blockGroup>
          </y-attributed-delete>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-delete>
    <y-attributed-insert userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n0">
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-insert userIds="">N0</y-attributed-insert>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-insert>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-insert>
    <y-attributed-insert userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="n1">
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-insert userIds="">N1</y-attributed-insert>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-insert>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;
